more j8 fixes